prevent default scroll behavior when canvas is interacted with on mobile

--- a/src/styles/Components/Cropper.module.scss
+++ b/src/styles/Components/Cropper.module.scss
@@ -20,6 +20,7 @@
 
 	>canvas {
 		cursor: pointer;
+		touch-action: none;
 	}
 
 	.inputs {
@@ -77,7 +78,7 @@
 		left: 0;
 		width: 100vw;
 		height: 100vh;
-		background-color: rgba(0, 0, 0, 0.3);
+		background-color: rgba(0, 0, 0, 0.5);
 		transition: opacity 0.25s ease;
 		display: flex;
 		flex-direction: column;
